# tasks

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gulpfile.js  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  content.json  help.json  index.html  main.js  package-lock.json  package.json  sse.js  style.css  style.css.map  style.scss  update.js
.sass-cache/b8106e92671c6064ed92ccf334c1e9e0c3ae5a55/: style.scssc
backend/: .backend.h.swp  .helpers.c.swp  .server.c.swp  .socket.c.swp  .tasks-tracker.c.swp  backend.h  helpers.c  server.c  setup.sh  socket.c  tasks-tracker.c
src/: Makefile.am  Makefile.in  backend.h  http.c  index.html  server.c  socket.c  style.scss  sw.js  tasks-tracker.c
src/img/: logo.gvdesign
src/js/: update.js
src/sass/: style.scss
src/static/: manifest.json
systemd/: tasks.service  tasks.socket
tests/: index.js  sse.js
